[package]
name = "pcap2api"
version = "2.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
colored = "2.0"
csv = "1.3"
indicatif = "0.17"
rayon = "1.8"
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "time"] }
url = "2.5"
dns-parser = "0.8"
chrono = "0.4"
lazy_static = "1.4"
async-trait = "0.1"
dirs = "5.0"
ipnet = "2.9"
base64 = "0.21"
pcap = "1.3"
